add portal page and update README

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "reveal.js",
-  "version": "5.2.1",
-  "description": "The HTML Presentation Framework",
-  "homepage": "https://revealjs.com",
-  "subdomain": "revealjs",
+  "name": "pengkom-materi-ajar",
+  "version": "1.0.0",
+  "description": "Materi ajar dan slide presentasi untuk Pengenalan Komputasi (WI25-00003) di Institut Teknologi Sumatera (ITERA)",
+  "homepage": "",
+  "subdomain": "pengkom",
   "main": "dist/reveal.js",
   "module": "dist/reveal.esm.js",
   "license": "MIT",
